@@ -1,23 +1,25 @@
 package org.ftf.koifishveterinaryservicecenter.controller;
 
 
+import com.nimbusds.jose.JOSEException;
 import lombok.extern.slf4j.Slf4j;
 import org.ftf.koifishveterinaryservicecenter.dto.*;
 import org.ftf.koifishveterinaryservicecenter.dto.response.AuthenticationResponse;
 import org.ftf.koifishveterinaryservicecenter.dto.response.IntrospectResponse;
 import org.ftf.koifishveterinaryservicecenter.entity.Address;
-import org.ftf.koifishveterinaryservicecenter.entity.Feedback;
 import org.ftf.koifishveterinaryservicecenter.entity.User;
+import org.ftf.koifishveterinaryservicecenter.entity.veterinarian_slots.VeterinarianSlots;
+import org.ftf.koifishveterinaryservicecenter.exception.AddressNotFoundException;
 import org.ftf.koifishveterinaryservicecenter.exception.AuthenticationException;
-import org.ftf.koifishveterinaryservicecenter.exception.FeedbackNotFoundException;
+import org.ftf.koifishveterinaryservicecenter.exception.TimeSlotNotFoundException;
 import org.ftf.koifishveterinaryservicecenter.exception.UserNotFoundException;
 import org.ftf.koifishveterinaryservicecenter.mapper.AddressMapper;
-import org.ftf.koifishveterinaryservicecenter.mapper.FeedbackMapper;
 import org.ftf.koifishveterinaryservicecenter.mapper.UserMapper;
+import org.ftf.koifishveterinaryservicecenter.service.appointmentservice.AppointmentService;
 import org.ftf.koifishveterinaryservicecenter.service.feedbackservice.FeedbackService;
-import org.ftf.koifishveterinaryservicecenter.service.userservice.AuthenticationService;
+import org.ftf.koifishveterinaryservicecenter.service.slotservice.SlotService;
+import org.ftf.koifishveterinaryservicecenter.service.userservice.AuthenticationServiceImpl;
 import org.ftf.koifishveterinaryservicecenter.service.userservice.UserService;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
@@ -36,16 +38,20 @@ public class UserController {
 
     private final UserService userService;
     private final UserMapper userMapper;
-    private final AuthenticationService authenticationService;
+    private final AuthenticationServiceImpl authenticationService;
     private final FeedbackService feedbackService;
+    private final AppointmentService appointmentService;
+    private final SlotService slotService;
 
-    @Autowired
-    public UserController(UserService userService, UserMapper userMapper, AuthenticationService authenticationService, FeedbackService feedbackService) {
+    public UserController(UserService userService, UserMapper userMapper, AuthenticationServiceImpl authenticationService, FeedbackService feedbackService, AppointmentService appointmentService, SlotService slotService) {
         this.userService = userService;
         this.userMapper = userMapper;
         this.authenticationService = authenticationService;
         this.feedbackService = feedbackService;
+        this.appointmentService = appointmentService;
+        this.slotService = slotService;
     }
+
 
     @GetMapping("/profile")
     public ResponseEntity<?> getProfile(@RequestParam Integer userId) {
@@ -56,19 +62,20 @@ public class UserController {
         return ResponseEntity.ok(userDto);
     }
 
-    @PutMapping("/address")
-    public ResponseEntity<?> updateAddressForCustomer(@RequestParam Integer userId, @RequestBody AddressDTO addressFromRequest) {
-
-        Address convertedAddress = AddressMapper.INSTANCE.convertDtoToEntity(addressFromRequest);
-
-        Integer userIdFromToken = 1; // the userId takes from Authentication object in SecurityContext
-
-        // check(userIdFromToken, userId)
-
-        User updatedCustomer = userService.updateAddress(userId, convertedAddress);
-        UserDTO userDto = UserMapper.INSTANCE.convertEntityToDto(updatedCustomer);
-        return ResponseEntity.ok(userDto);
-    }
+// Already have API in AddressController
+//    @PutMapping("/address")
+//    public ResponseEntity<?> updateAddressForCustomer(@RequestParam Integer userId, @RequestBody AddressDTO addressFromRequest) {
+//
+//        Address convertedAddress = AddressMapper.INSTANCE.convertDtoToEntity(addressFromRequest);
+//
+//        Integer userIdFromToken = 1; // the userId takes from Authentication object in SecurityContext
+//
+//        // check(userIdFromToken, userId)
+//
+//        User updatedCustomer = userService.updateAddress(userId, convertedAddress);
+//        UserDTO userDto = UserMapper.INSTANCE.convertEntityToDto(updatedCustomer);
+//        return ResponseEntity.ok(userDto);
+//    }
 
     @PutMapping("/profile")
     public ResponseEntity<?> updateUserProfile(@RequestParam Integer userId, @RequestBody UserDTO userFromRequest) {
@@ -105,9 +112,7 @@ public class UserController {
         if (customers.isEmpty()) {
             return new ResponseEntity<>(HttpStatus.NO_CONTENT);
         } else {
-            List<UserDTO> userDTOs = customers.stream()
-                    .map(userMapper::convertEntityToDto)
-                    .collect(Collectors.toList());
+            List<UserDTO> userDTOs = customers.stream().map(userMapper::convertEntityToDto).collect(Collectors.toList());
             return new ResponseEntity<>(userDTOs, HttpStatus.OK);
         }
     }
@@ -115,21 +120,18 @@ public class UserController {
     @PostMapping("/token")
     ApiResponse<AuthenticationResponse> authenticate(@RequestBody AuthenticationRequestDTO request) {
         var result = authenticationService.authenticate(request);
-        return ApiResponse.<AuthenticationResponse>builder()
-                .result(result)
-                .build();
+        return ApiResponse.<AuthenticationResponse>builder().result(result).build();
     }
+
 
     @PostMapping("/introspect")
     ApiResponse<IntrospectResponse> authenticate(@RequestBody IntrospectRequestDTO request)
-            throws ParseException {
+            throws ParseException, JOSEException {
         var result = authenticationService.introspect(request);
         if (result == null) {
             return ApiResponse.<IntrospectResponse>builder().code(404).build();
         }
-        return ApiResponse.<IntrospectResponse>builder()
-                .result(result)
-                .build();
+        return ApiResponse.<IntrospectResponse>builder().result(result).build();
     }
 
 
@@ -138,16 +140,16 @@ public class UserController {
         try {
             String username = userDTOFromRequest.getUsername();
             String password = userDTOFromRequest.getPassword();
+            String email = userDTOFromRequest.getEmail();
             String firstName = userDTOFromRequest.getFirstName();
             String lastName = userDTOFromRequest.getLastName();
 
-            userService.signUp(username, password, firstName, lastName);
+            userService.signUp(username, password, email, firstName, lastName);
             return new ResponseEntity<>("Sign up successfully", HttpStatus.OK);
         } catch (AuthenticationException ex) {
             return new ResponseEntity<>(ex.getMessage(), HttpStatus.BAD_REQUEST);
         }
     }
-
 
     /*
      * Update avatar of user
@@ -155,8 +157,7 @@ public class UserController {
      * */
     @PreAuthorize("hasAuthority('CUS')")
     @PutMapping("/avatar")
-    public ResponseEntity<?> updateUserAvatar(@RequestParam("user_id") Integer userId
-            , @RequestParam("image") MultipartFile image) {
+    public ResponseEntity<?> updateUserAvatar(@RequestParam("user_id") Integer userId, @RequestParam("image") MultipartFile image) {
         try {
             User user = userService.updateUserAvatar(userId, image);
             UserDTO userDto = UserMapper.INSTANCE.convertEntityToDtoIgnoreAddress(user);
@@ -168,13 +169,14 @@ public class UserController {
         }
     }
 
+    /*
+     * Actors: Manager
+     * */
     @GetMapping("/veterinarians")
     public ResponseEntity<?> getAllVeterinarians() {
         try {
             List<User> veterinarians = userService.getAllVeterinarians();
-            List<UserDTO> userDTOs = veterinarians.stream()
-                    .map(UserMapper.INSTANCE::convertEntityToDtoIgnoreAddress)
-                    .collect(Collectors.toList());
+            List<UserDTO> userDTOs = veterinarians.stream().map(UserMapper.INSTANCE::convertEntityToDtoIgnoreAddress).collect(Collectors.toList());
             return new ResponseEntity<>(userDTOs, HttpStatus.OK);
         } catch (UserNotFoundException e) {
             return new ResponseEntity<>(e.getMessage(), HttpStatus.NOT_FOUND);
@@ -183,51 +185,98 @@ public class UserController {
         }
     }
 
-    @GetMapping("/veterinarian/{id}/feedbacks")
-    public ResponseEntity<?> getFeedbacks(@PathVariable("id") Integer id) {
+
+    // get all available VET based on slotId
+    // for Staff
+    @GetMapping("/veterinarian/{slotId}")
+    public ResponseEntity<?> getAllAvailableVeterinariansBasedOnSlotId(@PathVariable Integer slotId) {
         try {
-            List<Feedback> feedbacks = feedbackService.getFeedbacksByVeterianrianId(id);
-            List<FeedbackDto> feedbackDtos = feedbacks.stream()
-                    .map(feedback -> FeedbackMapper.INSTANCE.convertToFeedbackDto(feedback))
-                    .collect(Collectors.toList());
-            return new ResponseEntity<>(feedbackDtos, HttpStatus.OK);
+            List<VeterinarianSlots> veterinarianSlots = slotService.getVeterinarianSlotsBySlotId(slotId);
+
+            // from vetId -> list veterinarian
+            List<User> veterinarians = veterinarianSlots.stream().map(vetSlot -> userService.getVeterinarianById(vetSlot.getVeterinarian().getUserId())).toList();
+
+            List<UserDTO> vetDtos = veterinarians.stream().map(UserMapper.INSTANCE::convertToVeterinarianDto).toList();
+            return new ResponseEntity<>(vetDtos, HttpStatus.OK);
+        } catch (TimeSlotNotFoundException exception) {
+            return new ResponseEntity<>(exception.getMessage(), HttpStatus.NOT_FOUND);
+        }
+    }
+
+
+    @PutMapping("/address")
+    public ResponseEntity<?> updateAddress(@RequestParam Integer addressId) {
+        try {
+            Integer customerId = authenticationService.getAuthenticatedUserId();
+            Address address = userService.getAddressById(addressId);
+            if (address.getCustomer().getUserId().equals(customerId)) {
+                address = userService.setCurrentAddress(customerId, addressId);
+                AddressDTO addressDto = AddressMapper.INSTANCE.convertEntityToDto(address);
+                return new ResponseEntity<>(addressDto, HttpStatus.OK);
+            } else {
+                return new ResponseEntity<>(HttpStatus.FORBIDDEN);
+            }
         } catch (UserNotFoundException e) {
             return new ResponseEntity<>(e.getMessage(), HttpStatus.NOT_FOUND);
-        } catch (FeedbackNotFoundException e) {
-            return new ResponseEntity<>(e.getMessage(), HttpStatus.NO_CONTENT);
+        } catch (AddressNotFoundException e) {
+            return new ResponseEntity<>(e.getMessage(), HttpStatus.NOT_FOUND);
         } catch (Exception e) {
             return new ResponseEntity<>(e.getMessage(), HttpStatus.INTERNAL_SERVER_ERROR);
         }
     }
 
-    @GetMapping("/veterinarian/{veterinarianId}/feedbacks/{feedbackId}")
-    public ResponseEntity<?> getFeedback(@PathVariable("feedbackId") Integer feedbackId
-            , @PathVariable("veterinarianId") Integer veterinarianId) {
-        try {
-            Feedback feedback = feedbackService.getFeedbackById(feedbackId);
-            if (feedback.getVeterinarian().getUserId().equals(veterinarianId)) {
-                FeedbackDto feedbackDto = FeedbackMapper.INSTANCE.feedbackToFeedbackDto(feedback);
-                return new ResponseEntity<>(feedbackDto, HttpStatus.OK);
-            } else {
-                return new ResponseEntity<>(HttpStatus.FORBIDDEN);
-            }
-        } catch (FeedbackNotFoundException e) {
-            return new ResponseEntity<>(e.getMessage(), HttpStatus.NO_CONTENT);
+    // view list staffs
+    @GetMapping("/staffs")
+    public ResponseEntity<?> getAllStaffsAndVeterinarians() {
+        List<User> staffs = userService.getAllStaffs();
+
+        if (staffs.isEmpty()) {
+            return new ResponseEntity<>(HttpStatus.NO_CONTENT);
+        } else {
+            List<UserDTO> userDTOS = staffs.stream()
+                    .map(UserMapper.INSTANCE::convertEntityToDto)
+                    .collect(Collectors.toList());
+            return new ResponseEntity<>(userDTOS, HttpStatus.OK);
         }
     }
 
-    @PutMapping("/updateuser")
-    public ResponseEntity<UserDTO> updateUser(@RequestBody UserDTO userDTO) {
+
+    @PostMapping("/staff")
+    public ResponseEntity<String> createStaff(@RequestBody UserDTO userDTO) {
+        UserDTO createdUser = userService.createStaff(userDTO.getUsername(), userDTO.getPassword(), userDTO.getFirstName(), userDTO.getLastName());
+        if (createdUser == null) {
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Thêm mới nhân viên thất bại.");
+        } else {
+            return ResponseEntity.status(HttpStatus.OK).body("Thêm mới nhân viên thành công.");
+        }
+    }
+
+    @PostMapping("/logout")
+    ApiResponse<Void> logout(@RequestBody LogoutRequest request) throws ParseException, JOSEException {
+        authenticationService.logout(request);
+        return ApiResponse.<Void>builder().build();
+    }
+
+    @PostMapping("/refresh")
+    ApiResponse<AuthenticationResponse> logout(@RequestBody RefreshRequest request) throws ParseException, JOSEException {
+        var result = authenticationService.refreshToken(request);
+        return ApiResponse.<AuthenticationResponse>builder()
+                .result(result)
+                .build();
+    }
+
+    @DeleteMapping("/deleteuser")
+    public ResponseEntity<String> updateUser(@RequestBody UserDTO userDTO) {
         try {
             // Gọi phương thức updateUser từ service với dữ liệu từ UserDTO
-            UserDTO updatedUser = userService.updateUserInfo(userDTO.getUserId(), userDTO.isEnabled());
+            userService.updateUserInfo(userDTO.getUserId(), userDTO.isEnabled());
 
-            // Trả về kết quả thành công với đối tượng UserDTO đã cập nhật
-            return ResponseEntity.ok(updatedUser);
+            // Trả về thông báo thành công
+            return ResponseEntity.ok("User updated successfully.");
         } catch (UserNotFoundException e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(null);
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("User not found.");
         } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.NOT_ACCEPTABLE).body(null);
+            return ResponseEntity.status(HttpStatus.NOT_ACCEPTABLE).body("Error updating user.");
         }
     }
 
